<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StartFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textTitleTV"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#1F5418"
        android:textAlignment="center"
        android:layout_marginTop="15dp"/>

    <ImageView
        android:id="@+id/imageIV"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/weather01"
        tools:ignore="ContentDescription"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textDescriptionTV"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        android:layout_margin="8dp"
        android:textColor="#C59709"/>

    <Button
        android:id="@+id/goToWeatherBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textGoToWeatherBTN"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_marginTop="200dp"
        android:layout_gravity="center"
        android:visibility="gone"/>

</LinearLayout>